Here's the commented version of the code:

```python
# Copyright 2016 gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.

import logging

import http2_base_server
import messages_pb2

# Constants for padding and data chunking
_LARGE_PADDING_LENGTH = 255  # Length of padding to use when padding is enabled
_SMALL_READ_CHUNK_SIZE = 5   # Size of data chunks to read when sending response

class TestDataFramePadding(object):
    """
    A test class for verifying HTTP/2 data frame padding behavior.
    
    In response to an incoming request, this test sends:
    1. Headers
    2. Data (with optional padding)
    3. A reset stream frame
    
    The client should assert that the RPC failed but still deliver the complete
    message to the application layer.
    """

    def __init__(self, use_padding=True):
        """
        Initialize the test server.
        
        Args:
            use_padding: Boolean indicating whether to use padding in data frames
        """
        # Initialize base HTTP/2 server
        self._base_server = http2_base_server.H2ProtocolBaseServer()
        
        # Register event handlers
        self._base_server._handlers["DataReceived"] = self.on_data_received
        self._base_server._handlers["WindowUpdated"] = self.on_window_update
        self._base_server._handlers["RequestReceived"] = self.on_request_received

        # Dictionary to track total window updates per stream
        self._total_updates = {}
        self._total_updates[0] = 0  # Initialize for stream 0
        
        # Configuration for response data chunking
        self._read_chunk_size = _SMALL_READ_CHUNK_SIZE
        
        # Configure padding based on test parameter
        if use_padding:
            self._pad_length = _LARGE_PADDING_LENGTH
        else:
            self._pad_length = None  # No padding

    def get_base_server(self):
        """Return the base HTTP/2 server instance."""
        return self._base_server

    def on_data_received(self, event):
        """
        Handle DATA frame received event.
        
        Args:
            event: The event object containing stream ID and data payload
        """
        logging.info(
            "on data received. Stream id: %d. Data length: %d"
            % (event.stream_id, len(event.data))
        )
        
        # Process data with base server's default handler
        self._base_server.on_data_received_default(event)
        
        # Ignore empty data frames
        if len(event.data) == 0:
            return
            
        # Parse received data and prepare response
        sr = self._base_server.parse_received_data(event.stream_id)
        stream_bytes = ""

        if sr:
            # Generate response data of requested size
            response_data = self._base_server.default_response_data(
                sr.response_size
            )
            logging.info(
                "Stream id: %d. total resp size: %d"
                % (event.stream_id, len(response_data))
            )

            # Send response with configured padding and chunking
            self._base_server.setup_send(
                response_data,
                event.stream_id,
                pad_length=self._pad_length,
                read_chunk_size=self._read_chunk_size,
            )

    def on_request_received(self, event):
        """
        Handle request received event.
        
        Args:
            event: The event object containing stream ID
        """
        # Process request with base server's default handler
        self._base_server.on_request_received_default(event)
        logging.info("on request received. Stream id: %s." % event.stream_id)
        
        # Initialize window update counter for this stream
        self._total_updates[event.stream_id] = 0

    def on_window_update(self, event):
        """
        Handle window update event.
        
        Args:
            event: The event object containing stream ID and window size delta
        """
        logging.info(
            "on window update. Stream id: %s. Delta: %s"
            % (event.stream_id, event.delta)
        )
        
        # Track total window updates for this stream
        self._total_updates[event.stream_id] += event.delta
        total = self._total_updates[event.stream_id]
        logging.info(
            "... - total updates for stream %d : %d" % (event.stream_id, total)
        )
        
        # Process window update with base server's default handler
        self._base_server.on_window_update_default(
            event,
            pad_length=self._pad_length,
            read_chunk_size=self._read_chunk_size,
        )
```