Here's the commented version of the code snippet:

```c++
# Copyright 2016 gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.

import logging
import time

import http2_base_server

class TestcaseGoaway(object):
    """
    This test does the following:
      Process incoming request normally, i.e. send headers, data and trailers.
      Then send a GOAWAY frame with the stream id of the processed request.
      It checks that the next request is made on a different TCP connection.
    """

    def __init__(self, iteration):
        """Initialize the test case with the given iteration number.
        
        Args:
            iteration: The current test iteration number (used to track test progress)
        """
        # Initialize base HTTP/2 server
        self._base_server = http2_base_server.H2ProtocolBaseServer()
        # Set up event handlers for different HTTP/2 events
        self._base_server._handlers[
            "RequestReceived"
        ] = self.on_request_received
        self._base_server._handlers["DataReceived"] = self.on_data_received
        self._base_server._handlers["SendDone"] = self.on_send_done
        self._base_server._handlers["ConnectionLost"] = self.on_connection_lost
        # Flag to track when we're ready to send data
        self._ready_to_send = False
        # Store the iteration count
        self._iteration = iteration

    def get_base_server(self):
        """Get the underlying HTTP/2 server instance.
        
        Returns:
            The base HTTP/2 server object
        """
        return self._base_server

    def on_connection_lost(self, reason):
        """Handle connection loss event.
        
        Args:
            reason: The reason for connection loss
        """
        logging.info("Disconnect received. Count %d" % self._iteration)

        # Only propagate connection loss event on the second iteration
        if self._iteration == 2:
            self._base_server.on_connection_lost(reason)

    def on_send_done(self, stream_id):
        """Callback when sending is complete for a stream.
        
        Args:
            stream_id: The ID of the stream that completed sending
        """
        # Perform default send completion handling
        self._base_server.on_send_done_default(stream_id)
        # Send GOAWAY frame for this stream to force new connection for next request
        logging.info("Sending GOAWAY for stream %d:" % stream_id)
        self._base_server._conn.close_connection(
            error_code=0, additional_data=None, last_stream_id=stream_id
        )
        # Mark the stream as closed
        self._base_server._stream_status[stream_id] = False

    def on_request_received(self, event):
        """Handle incoming request event.
        
        Args:
            event: The request received event
        """
        # Reset send ready flag and process request normally
        self._ready_to_send = False
        self._base_server.on_request_received_default(event)

    def on_data_received(self, event):
        """Handle data received event for a stream.
        
        Args:
            event: The data received event
        """
        # Process received data normally
        self._base_server.on_data_received_default(event)
        # Parse the received data
        sr = self._base_server.parse_received_data(event.stream_id)
        if sr:
            # If data was successfully parsed, prepare response
            logging.info("Creating response size = %s" % sr.response_size)
            response_data = self._base_server.default_response_data(
                sr.response_size
            )
            # Set flag to indicate we're ready to send response
            self._ready_to_send = True
            # Set up the response to be sent
            self._base_server.setup_send(response_data, event.stream_id)
```