Here's the commented version of the code:

```c++
# Copyright 2016 gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.

import logging

import http2_base_server
import hyperframe.frame

class TestcaseSettingsMaxStreams(object):
    """
    This test sets MAX_CONCURRENT_STREAMS to 1 and asserts that at any point
    only 1 stream is active.
    The test verifies HTTP/2 server behavior when limited to a single concurrent stream.
    """

    def __init__(self):
        """Initialize the test case with base HTTP/2 server and set up handlers."""
        self._base_server = http2_base_server.H2ProtocolBaseServer()
        # Set custom handlers for data received and connection made events
        self._base_server._handlers["DataReceived"] = self.on_data_received
        self._base_server._handlers["ConnectionMade"] = self.on_connection_made

    def get_base_server(self):
        """Get the underlying HTTP/2 server instance.
        
        Returns:
            The base HTTP/2 server used by this test case.
        """
        return self._base_server

    def on_connection_made(self):
        """Handler for when a new TCP connection is established.
        
        Initializes HTTP/2 connection, sets MAX_CONCURRENT_STREAMS to 1,
        and enables TCP_NODELAY for lower latency.
        """
        logging.info("Connection Made")
        # Initialize HTTP/2 connection
        self._base_server._conn.initiate_connection()
        # Update server settings to allow only 1 concurrent stream
        self._base_server._conn.update_settings(
            {hyperframe.frame.SettingsFrame.MAX_CONCURRENT_STREAMS: 1}
        )
        # Enable TCP_NODELAY to disable Nagle's algorithm
        self._base_server.transport.setTcpNoDelay(True)
        # Send any pending connection data
        self._base_server.transport.write(
            self._base_server._conn.data_to_send()
        )

    def on_data_received(self, event):
        """Handler for when data is received from the client.
        
        Args:
            event: The data received event containing stream information.
        
        Processes received data and sends a default response back to the client.
        """
        # First let base server handle the data
        self._base_server.on_data_received_default(event)
        # Parse the received data to get stream requirements
        sr = self._base_server.parse_received_data(event.stream_id)
        if sr:
            logging.info("Creating response of size = %s" % sr.response_size)
            # Generate default response data of requested size
            response_data = self._base_server.default_response_data(
                sr.response_size
            )
            # Queue the response to be sent
            self._base_server.setup_send(response_data, event.stream_id)
```