Here's the commented version of the code:

```c++
# Copyright 2016 gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.

import http2_base_server

class TestcaseRstStreamAfterData(object):
    """
    This test case simulates a scenario where a server sends headers, data,
    and then immediately resets the stream. The client is expected to:
    1. Recognize the RPC as failed
    2. Still deliver the complete message to the application layer
    
    This tests proper error handling and message completion in HTTP/2 streams.
    """

    def __init__(self):
        """Initialize the test case with base HTTP/2 server functionality."""
        # Initialize base HTTP/2 server
        self._base_server = http2_base_server.H2ProtocolBaseServer()
        # Register custom handlers for data reception and send completion
        self._base_server._handlers["DataReceived"] = self.on_data_received
        self._base_server._handlers["SendDone"] = self.on_send_done

    def get_base_server(self):
        """Get the underlying HTTP/2 server instance.
        
        Returns:
            The base HTTP/2 server object being used for this test case.
        """
        return self._base_server

    def on_data_received(self, event):
        """Handler for when data is received from the client.
        
        Args:
            event: The data received event containing stream information.
        """
        # First process the data using default handler
        self._base_server.on_data_received_default(event)
        # Parse the received data from the stream
        sr = self._base_server.parse_received_data(event.stream_id)
        if sr:
            # Generate default response data of specified size
            response_data = self._base_server.default_response_data(
                sr.response_size
            )
            # Mark as ready to send and setup the response
            self._ready_to_send = True
            self._base_server.setup_send(response_data, event.stream_id)

    def on_send_done(self, stream_id):
        """Handler for when sending data to client is complete.
        
        Args:
            stream_id: The ID of the stream where sending completed.
        """
        # Immediately send RST_STREAM frame to reset/terminate the stream
        self._base_server.send_reset_stream()
        # Update stream status to indicate it's no longer active
        self._base_server._stream_status[stream_id] = False
```

Key improvements in the comments:
1. Added detailed class docstring explaining the test scenario and expectations
2. Added method-level docstrings explaining purpose, arguments, and return values
3. Added inline comments for important logic blocks
4. Maintained consistent comment style
5. Explained the test's purpose in verifying proper HTTP/2 stream handling
6. Clarified the sequence of operations (headers -> data -> RST_STREAM)
7. Added context about error handling expectations

The comments now provide a clear understanding of:
- What the test is trying to verify
- How the test case is structured
- The flow of operations
- The purpose of each method
- The expected behavior of both server and client